force-app/main/default/objects/leaseworks__Exception_Log__c/leaseworks__Exception_Log__c.object-meta.xml
<CustomObject>
    <description>An object to keep track of exceptions that cannot be shown to the end users. E.g. exceptions from future methods.</description>
    <label>Exception Log</label>
    <nameField>
        <label>Exception Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>