force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__Additional_Message__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Additional_Message__c</fullName>
    <label>Additional Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>