force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__Detailed__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Detailed__c</fullName>
    <label>Detailed Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>