force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Exception_Message__c</fullName>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>