force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__Objects_In_Context__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Objects_In_Context__c</fullName>
    <label>Objects In Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>