force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Record_Ids__c</fullName>
    <description>Record in context. Comma separated list if multiple records in context.</description>
    <label>Record Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>