force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>