force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__Trigger_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Trigger_Event_Type__c</fullName>
    <label>Trigger Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>