force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>