force-app/main/default/objects/leaseworks__Exception_Log__c/fields/leaseworks__User_In_Context__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__User_In_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User In Context</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>